removed old version of pf

--- a/src/main/webapp/layout/main-template.xhtml
+++ b/src/main/webapp/layout/main-template.xhtml
@@ -25,7 +25,6 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.prime.com.tr/ui"
         >
 
 <f:view contentType="text/html">
@@ -131,7 +130,7 @@
             </div>
             <div class="clear"></div>
         </div>
-        <p:growl sticky="false" showSummary="true" showDetail="false"/>
+        <h:messages showSummary="true" showDetail="false"/>
         <div id="footer">
             <div class="copyright">
                 <p>&#169; The Apache Software Foundation
