ds:windowId added

--- a/src/main/webapp/layout/main-template.xhtml
+++ b/src/main/webapp/layout/main-template.xhtml
@@ -25,6 +25,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:ds="http://deltaspike.apache.org/jsf"
         >
 
 <f:view contentType="text/html">
@@ -137,6 +138,8 @@
                 </p>
             </div>
         </div>
+
+        <ds:windowId/>
     </h:body>
 </f:view>
 </html>
